Теперь если у файла нет расширения, оно автоматически подставляется, исходя из типа файла!

--- a/YandexFotki.html
+++ b/YandexFotki.html
@@ -18,10 +18,11 @@
     
 <tr><td bgcolor="#aa55cc"><tt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</tt></td><td>&nbsp;</td>
 <td width="100%"><table width="100%" summary="list"><tr><td width="25%" valign=top><a href="httplib.html">httplib</a><br>
-</td><td width="25%" valign=top><a href="os.html">os</a><br>
-</td><td width="25%" valign=top><a href="sys.html">sys</a><br>
+<a href="os.html">os</a><br>
+</td><td width="25%" valign=top><a href="re.html">re</a><br>
+<a href="sys.html">sys</a><br>
 </td><td width="25%" valign=top><a href="urllib.html">urllib</a><br>
-</td></tr></table></td></tr></table><p>
+</td><td width="25%" valign=top></td></tr></table></td></tr></table><p>
 <table width="100%" cellspacing=0 cellpadding=2 border=0 summary="section">
 <tr bgcolor="#ee77aa">
 <td colspan=3 valign=bottom>&nbsp;<br>
@@ -52,6 +53,8 @@
 title&nbsp;-&nbsp;название&nbsp;альбома,<br>
 linkalbum&nbsp;-&nbsp;ссылка&nbsp;на&nbsp;альбом<br>
 linkphotos&nbsp;-&nbsp;ссылка&nbsp;на&nbsp;фоточки&nbsp;альбома</tt></dd></dl>
+
+<dl><dt><a name="YandexFotki-GetFileType"><strong>GetFileType</strong></a>(self, link)</dt><dd><tt>Получение&nbsp;типа&nbsp;файла&nbsp;(для&nbsp;файлов&nbsp;без&nbsp;расширений)</tt></dd></dl>
 
 <dl><dt><a name="YandexFotki-GetPhoto"><strong>GetPhoto</strong></a>(self, link, filename, path)</dt><dd><tt>Скачиваем&nbsp;и&nbsp;сохраняем&nbsp;фоточку</tt></dd></dl>
 
